@@ -48,8 +48,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
 
     <!-- Sonar settings -->
     <sonar.projectKey>xlate_validators</sonar.projectKey>
@@ -63,15 +62,26 @@
     <version.maven.failsafe-plugin>3.0.0</version.maven.failsafe-plugin>
     <version.maven.jar.plugin>3.3.0</version.maven.jar.plugin>
     <version.maven.gpg.plugin>3.0.1</version.maven.gpg.plugin>
-    <version.jakarta.xml.bind.api>2.3.3</version.jakarta.xml.bind.api>
+    <version.jakarta.xml.bind.api>4.0.0</version.jakarta.xml.bind.api>
     <version.jacoco.maven.plugin>0.8.9</version.jacoco.maven.plugin>
+    <version.derby>10.15.2.0</version.derby>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>jakarta.el</groupId>
+        <artifactId>jakarta.el-api</artifactId>
+        <version>5.0.1</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>jakarta.validation</groupId>
       <artifactId>jakarta.validation-api</artifactId>
-      <version>2.0.2</version>
+      <version>3.0.2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -82,13 +92,17 @@
         -->
       <groupId>org.glassfish</groupId>
       <artifactId>jakarta.el</artifactId>
-      <version>3.0.4</version>
+      <version>4.0.2</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.el</groupId>
+      <artifactId>jakarta.el-api</artifactId>
     </dependency>
     <dependency>
       <groupId>jakarta.enterprise</groupId>
       <artifactId>jakarta.enterprise.cdi-api</artifactId>
-      <version>2.0.2</version>
+      <version>4.0.1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -113,7 +127,7 @@
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>6.2.4.Final</version>
+      <version>8.0.0.Final</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -125,13 +139,13 @@
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
-      <version>10.16.1.1</version>
+      <version>${version.derby}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derbytools</artifactId>
-      <version>10.16.1.1</version>
+      <version>${version.derby}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -161,11 +175,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${version.maven.surefire.plugin}</version>
+        <configuration>
+          <argLine>--add-modules jakarta.el ${argLine}</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -175,6 +193,7 @@
           <systemProperties>
             <derby.stream.error.file>target/derby.log</derby.stream.error.file>
           </systemProperties>
+          <argLine>--add-modules jakarta.el ${argLine}</argLine>
         </configuration>
         <executions>
           <execution>
@@ -220,17 +239,6 @@
             <exclude>**/*Test.class</exclude>
             <exclude>**/*IT.class</exclude>
           </excludes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.eluder.coveralls</groupId>
-        <artifactId>coveralls-maven-plugin</artifactId>
-        <version>4.3.0</version>
-        <configuration>
-          <jacocoReports>
-            <jacocoReport>${project.build.directory}/site/jacoco/jacoco.xml</jacocoReport>
-            <jacocoReport>${project.build.directory}/site/jacoco-it/jacoco.xml</jacocoReport>
-          </jacocoReports>
         </configuration>
       </plugin>
       <plugin>
